lab5/out
g++ -std=gnu++17 -g -O0 -Wall -Wextra -Wpedantic -Wshadow -Wold-style-cast -fdiagnostics-color=never -c symbol_table.cpp
symbol_table.cpp: In member function ‘symbol* symbol::symbol_deepcopy(astree*)’:
symbol_table.cpp:69:3: error: template placeholder type ‘vector’ must be followed by a simple declarator-id
   vector *newvector  = new vector<symbol*>();
   ^~~~~~
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:339:11: note: ‘template<class _Tp, class _Alloc> class std::vector’ declared here
     class vector : protected _Vector_base<_Tp, _Alloc>
           ^~~~~~
symbol_table.cpp:69:44: error: class template argument deduction failed:
   vector *newvector  = new vector<symbol*>();
                                            ^
symbol_table.cpp:69:44: error: no matching function for call to ‘vector(std::vector<symbol*>*)’
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:1737:5: note: candidate: ‘template<class _InputIterator, class _ValT, class _Allocator, class, class> std::vector(_InputIterator, _InputIterator, _Allocator)-> std::vector<_ValT, _Allocator>’
     vector(_InputIterator, _InputIterator, _Allocator = _Allocator())
     ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:1737:5: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   candidate expects 3 arguments, 1 provided
   vector *newvector  = new vector<symbol*>();
                                            ^
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:543:2: note: candidate: ‘template<class _Tp, class _Alloc, class _InputIterator, class> vector(_InputIterator, _InputIterator, const _Alloc&)-> std::vector<_Tp, _Alloc>’
  vector(_InputIterator __first, _InputIterator __last,
  ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:543:2: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   candidate expects 3 arguments, 1 provided
   vector *newvector  = new vector<symbol*>();
                                            ^
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:515:7: note: candidate: ‘template<class _Tp, class _Alloc> vector(std::initializer_list<_Tp>, const allocator_type&)-> std::vector<_Tp, _Alloc>’
       vector(initializer_list<value_type> __l,
       ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:515:7: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   mismatched types ‘std::initializer_list<_Tp>’ and ‘std::vector<symbol*>*’
   vector *newvector  = new vector<symbol*>();
                                            ^
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:490:7: note: candidate: ‘template<class _Tp, class _Alloc> vector(std::vector<_Tp, _Alloc>&&, const allocator_type&)-> std::vector<_Tp, _Alloc>’
       vector(vector&& __rv, const allocator_type& __m)
       ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:490:7: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   mismatched types ‘std::vector<_Tp, _Alloc>’ and ‘std::vector<symbol*>*’
   vector *newvector  = new vector<symbol*>();
                                            ^
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:480:7: note: candidate: ‘template<class _Tp, class _Alloc> vector(const std::vector<_Tp, _Alloc>&, const allocator_type&)-> std::vector<_Tp, _Alloc>’
       vector(const vector& __x, const allocator_type& __a)
       ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:480:7: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   mismatched types ‘const std::vector<_Tp, _Alloc>’ and ‘std::vector<symbol*>*’
   vector *newvector  = new vector<symbol*>();
                                            ^
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:476:7: note: candidate: ‘template<class _Tp, class _Alloc> vector(std::vector<_Tp, _Alloc>&&)-> std::vector<_Tp, _Alloc>’
       vector(vector&& __x) noexcept
       ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:476:7: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   mismatched types ‘std::vector<_Tp, _Alloc>’ and ‘std::vector<symbol*>*’
   vector *newvector  = new vector<symbol*>();
                                            ^
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:458:7: note: candidate: ‘template<class _Tp, class _Alloc> vector(const std::vector<_Tp, _Alloc>&)-> std::vector<_Tp, _Alloc>’
       vector(const vector& __x)
       ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:458:7: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   mismatched types ‘const std::vector<_Tp, _Alloc>’ and ‘std::vector<symbol*>*’
   vector *newvector  = new vector<symbol*>();
                                            ^
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:427:7: note: candidate: ‘template<class _Tp, class _Alloc> vector(std::vector<_Tp, _Alloc>::size_type, const value_type&, const allocator_type&)-> std::vector<_Tp, _Alloc>’
       vector(size_type __n, const value_type& __value,
       ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:427:7: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   candidate expects 3 arguments, 1 provided
   vector *newvector  = new vector<symbol*>();
                                            ^
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:391:7: note: candidate: ‘template<class _Tp, class _Alloc> vector()-> std::vector<_Tp, _Alloc>’
       vector()
       ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:391:7: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   candidate expects 0 arguments, 1 provided
   vector *newvector  = new vector<symbol*>();
                                            ^
In file included from /usr/include/c++/8.3.0/vector:64,
                 from symbol_table.cpp:6:
/usr/include/c++/8.3.0/bits/stl_vector.h:339:11: note: candidate: ‘template<class _Tp, class _Alloc> vector(std::vector<_Tp, _Alloc>)-> std::vector<_Tp, _Alloc>’
     class vector : protected _Vector_base<_Tp, _Alloc>
           ^~~~~~
/usr/include/c++/8.3.0/bits/stl_vector.h:339:11: note:   template argument deduction/substitution failed:
symbol_table.cpp:69:44: note:   mismatched types ‘std::vector<_Tp, _Alloc>’ and ‘std::vector<symbol*>*’
   vector *newvector  = new vector<symbol*>();
                                            ^
symbol_table.cpp:69:44: note: explicit deduction guides not considered for copy-initialization
make: *** [Makefile:55: symbol_table.o] Error 1
